logs/dag_id=spaceX_project/run_id=manual__2024-07-09T172132.017578+0000/task_id=load_output/attempt=2.log
[2024-07-09T17:22:35.115+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-09T17:22:35.145+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: spaceX_project.load_output manual__2024-07-09T17:21:32.017578+00:00 [queued]>
[2024-07-09T17:22:35.163+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: spaceX_project.load_output manual__2024-07-09T17:21:32.017578+00:00 [queued]>
[2024-07-09T17:22:35.163+0000] {taskinstance.py:2306} INFO - Starting attempt 2 of 7
[2024-07-09T17:22:35.179+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): load_output> on 2024-07-09 17:21:32.017578+00:00
[2024-07-09T17:22:35.187+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=411) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-07-09T17:22:35.189+0000] {standard_task_runner.py:63} INFO - Started process 413 to run task
[2024-07-09T17:22:35.189+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'spaceX_project', 'load_output', 'manual__2024-07-09T17:21:32.017578+00:00', '--job-id', '542', '--raw', '--subdir', 'DAGS_FOLDER/dag.py', '--cfg-path', '/tmp/tmpw7012x54']
[2024-07-09T17:22:35.192+0000] {standard_task_runner.py:91} INFO - Job 542: Subtask load_output
[2024-07-09T17:22:35.240+0000] {task_command.py:426} INFO - Running <TaskInstance: spaceX_project.load_output manual__2024-07-09T17:21:32.017578+00:00 [running]> on host f565c82ff71d
[2024-07-09T17:22:35.360+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='rustam' AIRFLOW_CTX_DAG_ID='spaceX_project' AIRFLOW_CTX_TASK_ID='load_output' AIRFLOW_CTX_EXECUTION_DATE='2024-07-09T17:21:32.017578+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-07-09T17:21:32.017578+00:00'
[2024-07-09T17:22:35.363+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-07-09T17:22:35.376+0000] {sql.py:276} INFO - Executing: 
            CREATE TABLE IF NOT EXISTS output(
                id INT PRIMARY_KEY,
                name TEXT,
                active BOOLEAN
            );
        
[2024-07-09T17:22:35.386+0000] {base.py:84} INFO - Using connection ID 'cosmos' for task execution.
[2024-07-09T17:22:35.394+0000] {base.py:84} INFO - Using connection ID 'cosmos' for task execution.
[2024-07-09T17:22:35.398+0000] {sql.py:487} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS output(
                id INT PRIMARY_KEY,
                name TEXT,
                active BOOLEAN
            );
        , parameters: None
[2024-07-09T17:22:35.406+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-07-09T17:22:35.407+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "PRIMARY_KEY"
LINE 3:                 id INT PRIMARY_KEY,
                               ^

[2024-07-09T17:22:35.416+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=spaceX_project, task_id=load_output, run_id=manual__2024-07-09T17:21:32.017578+00:00, execution_date=20240709T172132, start_date=20240709T172235, end_date=20240709T172235
[2024-07-09T17:22:35.430+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 542 for task load_output (syntax error at or near "PRIMARY_KEY"
LINE 3:                 id INT PRIMARY_KEY,
                               ^
; 413)
[2024-07-09T17:22:35.444+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-07-09T17:22:35.454+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/models/baseoperator.py:1297: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-07-09T17:22:35.467+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-09T17:22:35.469+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
